--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         <section id="redes-sociais">
 
@@ -18,19 +18,3 @@
     </main>
 </body>
 </html>
-
-
-main {
-    position: relative;
-    height: 100vh; /* ALTURA TOTAL */    
-    background-color: green;
-}
-
-section#telefone{
-    position: absolute; /* Deixar no meio da tela - Precisa do position: relative; lá em cima */
-    top: 50%;
-    left: 50%;
-    height: 500px;
-    width: 500px;
-    background-color: blue;
-}
