--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                <p>Seu navegador não é compatível com isso.</p>
+            </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="imagens/casa.png" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/youtube.png" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/hentai.png" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/hiper.png" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/xvideos.png" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/down-curso.png" alt=""></a>
         </section>
     </main>
 </body>
