--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="imagens/casa.png" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/youtube.png" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/hentai.png" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/hiper.png" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/xvideos.png" alt=""></a> <br>
-            <a href="#" target="tela"><img src="imagens/down-curso.png" alt=""></a>
+            <a href="home.html" target="tela"><img src="imagens/casa.png" alt=""></a> <br>
+            <a href="youtube.html" target="tela"><img src="imagens/youtube.png" alt=""></a> <br>
+            <a href="mhentai.html" target="tela"><img src="imagens/hentai.png" alt=""></a> <br>
+            <a href="hiper.html" target="tela"><img src="imagens/hiper.png" alt=""></a> <br>
+            <a href="xvideos.html" target="tela"><img src="imagens/xvideos.png" alt=""></a> <br>
+            <a href="downcursos.html" target="tela"><img src="imagens/down-curso.png" alt=""></a>
         </section>
     </main>
 </body>
