--- a/home.html
+++ b/home.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
+<!DOCTYPE html><html lang="pt-br"><head> <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home do celular</title>
 </head>
